--- a/web/css/responsive.css
+++ b/web/css/responsive.css
@@ -20,7 +20,7 @@
     padding-bottom: 0;
 }
     .step-img img{
-        margin-top: 0;  
+        margin-top: 0;
     }
     .services-box07 {
     padding: 30px;
@@ -184,7 +184,7 @@ background-position: 0 -100px;
     .caption-text h5 {
     margin-bottom: 5px !important;
 }
-    
+
 }
 /* Normal desktop :992px. */
 @media (min-width: 992px) and (max-width: 1200px) {
@@ -340,7 +340,7 @@ background-position: 0 -100px;
     .choose-btn a.g-btn {
     width: auto;
 }
-    
+
     .section-title h2 {
     font-size: 50px;
 }
@@ -437,7 +437,7 @@ background-position: 0 -100px;
    right: 5%;
 }
 
-    
+
 .top-btn {
    font-size: 11px;
 padding: 16px 27px;
@@ -449,7 +449,7 @@ padding: 16px 27px;
 .menu-area::before {
     width: 23%;
 }
-    
+
 .call-area h2 {
     color: #fff;
     font-size: 36px;
@@ -614,6 +614,8 @@ margin-right: 8px;
 }
 @media (min-width: 1500px) and (max-width: 1742px) {
     .header-social {
+        font-size: 13px;
+        width: 30px;
     margin-left: 0px;
     margin-top: 15px;
 }
@@ -687,7 +689,7 @@ margin-right: 8px;
     .footer-top-heiding .section-title h2{
         margin-bottom: 30px !important;
     }
-    
+
     .menu-area::before{
         width: 32%;
     }
@@ -714,7 +716,7 @@ margin-right: 8px;
     .testimonial-active2 .slick-arrow{
         display: none !important;
     }
-    
+
     .slider-content h2 {
     font-size: 38px;
 }
@@ -752,8 +754,8 @@ margin-right: 8px;
     .services-area .services-box {
     background-size: cover !important;
 }
-    
-    
+
+
       .button-group {
  display: flex;
 overflow: scroll;
@@ -772,17 +774,17 @@ margin-top: 30px;
     .slider-active .slick-track::before {
     background: #fff5f4;
 }
-    
+
     .s-about-img.p-relative {
     margin-bottom: 50px;
 }
-    
+
     .mean-container a.meanmenu-reveal {
 margin-top: -46px;
 color: #000;
 border: 1px solid #000;
 }
-    
+
     .contact-bg02 {
     padding: 30px;
     margin-bottom: 80px;
@@ -823,7 +825,7 @@ border: 1px solid #000;
     width: 100%;
     padding-left: 0;
 }
-    
+
 .cta-area.cta-bg::before {
     height: 100%;
     width: 100%;
@@ -855,7 +857,7 @@ border: 1px solid #000;
     .main-menu .has-sub > ul{
         position: relative;
     }
-    
+
 .container-p {
 	padding: 0 30px;
 }
@@ -1043,7 +1045,7 @@ border: 1px solid #000;
     .counter-bg::after{
         display: none;
     }
-    
+
     .portfolio-box img {
     margin-left: 0;
 }
@@ -1303,7 +1305,7 @@ box-shadow: 0 0 0 0;
 }
     .s-slider-content p {
         padding-right: 0;}
-    
+
 }
 
 
@@ -1454,7 +1456,7 @@ box-shadow: 0 0 0 0;
   text-align: center;
 }
     .booking-area ul {
-  display: inline-block;    
+  display: inline-block;
 }
     .booking-area ul li {
   margin-right: 0;
@@ -1469,7 +1471,7 @@ box-shadow: 0 0 0 0;
     .s-aliment-1{
         display: none;
     }
-    
+
     .header-input{
         width: 100%;
     }
@@ -1529,7 +1531,7 @@ box-shadow: 0 0 0 0;
   width: 100%;
   float: left;
 }
-    
+
     .portfolio-active .slick-arrow {
       display: none !important;
     }
@@ -1596,7 +1598,7 @@ margin-bottom: 50px;
     .class-content span.class-price {
   width: 71px;
 }
-    
+
     .menu-area.sticky-menu {
     padding: 10px 0;
 }
@@ -1619,7 +1621,7 @@ margin-bottom: 50px;
     .single-counter p {
 margin-top: -8px;
 padding-left: 15px;
-text-align: left;   
+text-align: left;
 }
     .class-active .slick-arrow,.button-group button::before{
         display: none !important;
@@ -1815,16 +1817,16 @@ display: inline-block;
     .counter-bg::before{
         display: none;
     }
-    
+
 .counter-bg::after,.aw-line::before{
      display: none;
     }
-        
+
     .testimonial-active2 .slick-arrow{
         display: none !important;
     }
-    
-    
+
+
 .testimonial-active2 {
     width: 100%;
     margin-top: 0;
@@ -1867,7 +1869,7 @@ display: inline-block;
 }
     .copyright-wrap li {
   margin-left: 10px;
-  
+
     }
     .button-group {
     display: flex;
@@ -1888,7 +1890,7 @@ display: inline-block;
     float: left;
     width: 100%;
 }
-         
+
      .header-two .mean-container a.meanmenu-reveal {
   margin-top: -35px;
   color: #fff;
@@ -1927,7 +1929,7 @@ display: inline-block;
     margin-bottom: 50px;
     margin-left: 0;
 }
-    
+
     .btn.ss-btn {
     padding: 20px 15px;
     font-size: 14px;
@@ -1941,17 +1943,17 @@ display: inline-block;
     .testimonial-active .slick-arrow {
 display: none !important;
 }
-    
+
     .single-post2 .row {
     margin-left: -15px;
     margin-right: -15px;
 }
-    
+
     .mean-container a.meanmenu-reveal {
 color: #000;
 border: 1px solid #000;
 }
-  
+
     .copyright-wrap ul{
         text-align: center;
         margin-top: 20px;
@@ -1982,7 +1984,7 @@ border: 1px solid #000;
     .slider-active .slick-track::before {
     background: #fff5f4;
 }
-    
+
     #feature-top {
     margin-top: -40px;
   }
@@ -2001,8 +2003,8 @@ border: 1px solid #000;
     left: inherit;
     right: 0px;
 }
-  
-    
+
+
 
     .contact-area .map {
      display: none;
@@ -2031,7 +2033,7 @@ border: 1px solid #000;
     .services-active2 .slider-nav {
     position: absolute;
     top: 150px;
-}   
+}
     .services-active2 .slick-arrow {
     left: -15px;
     }
@@ -2074,9 +2076,9 @@ border: 1px solid #000;
     .com-icon img{
         width: 100%;
     }
-    
+
     .counter-area {
-   
+
 }
 
     .single-counter {
@@ -2163,7 +2165,7 @@ padding-left: 0;
 .has-mega-menu{
         position:relative;
     }
-	 
+
     li.has-sub.has-mega-menu ul{
         position: relative;
         top: 0px; /*insert the needed value*/
@@ -2176,9 +2178,9 @@ padding-left: 0;
     /*flexbox fallback for browsers that do not support CSS GRID lyout*/
         display: flex;
         flex-wrap: wrap;
-    /*CSS GRID lyout*/ 
+    /*CSS GRID lyout*/
         display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(100%, 1fr));   
+        grid-template-columns: repeat(auto-fit,minmax(100%, 1fr));
 		margin-left: 0px;
 		height:200px;
 		overflow:auto;
@@ -2186,8 +2188,8 @@ padding-left: 0;
 	.timeline {
 
     padding: 50px 0px 50px 50px;
-   
-}	
+
+}
 	.tag-template img {
     width: 100% !important;
 }
@@ -2247,7 +2249,7 @@ padding-left: 0;
 	.wp-block-gallery li {
     width: 50%;
 	}
-	
+
 .main-menu .has-sub > ul {
     display: none;
     position: relative;
@@ -2266,7 +2268,7 @@ padding-left: 0;
     width: 100%;
     margin-bottom: 10px;
 	margin-left:0;
-	margin-top:0;	
+	margin-top:0;
 	padding-left:15px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0);
 	border-top:1px solid #f7f7f7;
@@ -2307,7 +2309,7 @@ border-bottom: none;
 .slider-bg .video-i.popup-video {
     display: none;
 }
-    
+
 .slider-content h2 {
 	font-size: 30px;
     letter-spacing: 0;
@@ -2505,7 +2507,7 @@ margin: 0;
 }
 .testimonial-active {
     width: 100%;
-   
+
 }
 .portfolio .col3 .grid-item,.portfolio .col2 .grid-item {
     width:100%;
