--- a/dashboard/tpl/css/adjusted.css
+++ b/dashboard/tpl/css/adjusted.css
@@ -1,3 +1,13 @@
+/*Load Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
+}
+/*End Load Google Fonts*/
 .header-three .second-header {
     background: #2c724f !important;
 }
@@ -11,4 +21,7 @@
 }
 .header-social a {
     font-size: 13px;
+}
+.cursor-pointer{
+    cursor:pointer;
 }
