--- a/dashboard/tpl/css/adjusted.css
+++ b/dashboard/tpl/css/adjusted.css
@@ -44,13 +44,7 @@
     font-size: 12px ;
     padding-right: 10px;
 }
-.icon-cal{
-    padding: 3px;
-    color: #fff;
-    background-color: #0a0b11;
-    border-radius: 2px;
-}
 .call-text-header {
     font-size: 11px;
-    line-height:.8;
+    line-height:1.1;
 }
