--- a/dashboard/tpl/css/adjusted.css
+++ b/dashboard/tpl/css/adjusted.css
@@ -47,3 +47,13 @@
     font-size: 11px;
     line-height:1.2;
 }
+.foot-nav{
+    background-color: #202C45 !important;
+    border-bottom: 1px solid #2c724f !important;
+    color: #fff;
+}
+.foot-nav li a{
+    border-radius: 12px;
+    color: #202C45 !important;
+    background-color: #fff;
+}
