fixed all files

--- a/dashboard/tpl/css/adjusted.css
+++ b/dashboard/tpl/css/adjusted.css
@@ -52,9 +52,22 @@
     border-bottom: 1px solid #2c724f !important;
     color: #fff;
 }
+.foot-nav li a{
+    color: #fff;
+}
 .foot-nav li a:hover{
     border-radius: 12px;
     color: #202C45 !important;
     background-color: #fff;
     transition: all 350ms linear;
+}
+.main-menu ul li.current a {
+    color: #fff;
+    font-weight: 400;
+}
+.foot-nav .main-menu ul li a {
+    color: #fff;
+    padding: 6px;
+    font-size: 14px;
+    font-weight: 400;
 }
