--- a/dashboard/css/adjustment.css
+++ b/dashboard/css/adjustment.css
@@ -19,13 +19,14 @@
 .text-dark-blue{
     color: #0a58ca!important;
 }
+.course-reg-check{
+    filter: blur(10px)!important;
+}
 .form-bd{
     height: 70vh!important;
     width: 100%;
     background-size: cover;
-    /*background: url('https://cdn.dribbble.com/users/2328616/screenshots/14360937/media/f14fc67ce0e14b86b6f741a694034906.png?resize=768x576&vertical=center') center;*/
     position: absolute;
-    /*filter: blur(10px);*/
 }
 .cursor-pointer{
     cursor: pointer;
